# casper-nft-marketplace-contract

./: Makefile  README.md
contract/: Cargo.toml
contract/src/: auction.rs  authorize_account.rs  bid.rs  constants.rs  detail.rs  entry_points.rs  error.rs  event.rs  fee.rs  icep47.rs  main.rs  offer.rs  offers.rs  on_auction.rs  on_offers.rs  on_orders.rs  order.rs  orders.rs  owner.rs  pre_buy_order.rs  pre_create_offer.rs  purse.rs  treasury_wallet.rs
contract/src/interfaces/: ierc20.rs  mod.rs
contract/src/lib/: mod.rs  reentrancy_guard.rs
contract/src/structs/: auction.rs  mod.rs  offer.rs
diagram/: Untitled Diagram.drawio
tests/src/: auction.rs  bid.rs  integration_tests.rs  offer.rs  order.rs
tests/wasm/: authorize_account.wasm  contract.wasm  pre_buy_order.wasm  pre_create_offer.wasm
