[package]
name = "casper_nft_marketplace_contract"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
hex = { version = "0.4.3", default-features = false }
[[bin]]
name = "contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "pre_buy_order"
path = "src/pre_buy_order.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "pre_create_offer"
path = "src/pre_create_offer.rs"
bench = false
doctest = false
test = false



[profile.release]
codegen-units = 1
lto = true

